Incorporate compilation environment in hash

--- a/torch_xla/csrc/runtime/BUILD
+++ b/torch_xla/csrc/runtime/BUILD
@@ -82,6 +82,7 @@ cc_library(
     ":computation_client",
     ":debug_macros",
     ":env_vars",
+    ":hash",
     ":multi_wait",
     ":stablehlo_helper",
     ":tensor_source",
@@ -137,6 +138,16 @@ cc_library(
     name = "env_vars",
     srcs = ["env_vars.cc"],
     hdrs = ["env_vars.h"],
+)
+
+cc_library(
+    name = "hash",
+    srcs = ["hash.cc"],
+    hdrs = ["hash.h"],
+    deps = [
+        ":sys_util",
+        "@torch//:headers",
+    ],
 )
 
 cc_library(
